Final commit - This one goes to all the underrepresented and oppressed peoples of the world!

--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,10 @@
 
       <div class="vis-text">
         Source:
-        <a href="http://psephos.adam-carr.net/" target="_blank" style="font-weight: 1000; padding-bottom: 2rem"
+        <a
+          href="http://psephos.adam-carr.net/"
+          target="_blank"
+          style="font-weight: 1000; padding-bottom: 2rem"
           >Adam Carr's Election Archive</a
         >
       </div>
